clusters/pikluster/default/nginx/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.nginx.local.danielvignoles.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`nginx.local.danielvignoles.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
          namespace: default
## default cert used in traefik namespace
#  tls:
#    secretName: local-danielvignoles-com-tls
